--- a/gsdk_dox/components.html
+++ b/gsdk_dox/components.html
@@ -9,19 +9,19 @@
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
 	
-    <link href="bootstrap3/css/bootstrap.css" rel="stylesheet" />
+    <link href="/bootstrap3/css/bootstrap.css" rel="stylesheet" />
 
-	<link href="assets/css/get-shit-done.css" rel="stylesheet" />
-    <link href="assets/css/demo.css" rel="stylesheet" />
+	<link href="/assets/css/get-shit-done.css" rel="stylesheet" />
+    <link href="/assets/css/demo.css" rel="stylesheet" />
 
-	<script src="jquery/jquery-1.10.2.js" type="text/javascript"></script>
-	<script src="assets/js/jquery-ui-1.10.4.custom.min.js" type="text/javascript"></script>
+	<script src="/jquery/jquery-1.10.2.js" type="text/javascript"></script>
+	<script src="/assets/js/jquery-ui-1.10.4.custom.min.js" type="text/javascript"></script>
 
-	<script src="bootstrap3/js/bootstrap.js" type="text/javascript"></script>
-	<script src="assets/js/gsdk-checkbox.js"></script>
-	<script src="assets/js/gsdk-radio.js"></script>
-	<script src="assets/js/gsdk-bootstrapswitch.js"></script>
-	<script src="assets/js/get-shit-done.js"></script>
+	<script src="/bootstrap3/js/bootstrap.js" type="text/javascript"></script>
+	<script src="/assets/js/gsdk-checkbox.js"></script>
+	<script src="/assets/js/gsdk-radio.js"></script>
+	<script src="/assets/js/gsdk-bootstrapswitch.js"></script>
+	<script src="/assets/js/get-shit-done.js"></script>
 
     <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
 
@@ -68,7 +68,7 @@ pre.prettyprint{
      <a href="http://creative-tim.com">
      <div class="logo-container">
         <div class="logo">
-            <img src="assets/img/new_logo.png">
+            <img src="/assets/img/new_logo.png">
         </div>
         <div class="brand">
             Creative Tim
@@ -80,8 +80,8 @@ pre.prettyprint{
         <div class="border no-right-border">Sh</div><div class="border">it</div>
         <div>Done</div>
     </div>
-    <div class="img-src" style="background-image: url('assets/img/blurred-black-cover.jpeg')"></div>
-    <div class="img-src img-blurred" style="background-image: url('assets/img/blurred-black-cover.jpeg')"></div>
+    <div class="img-src" style="background-image: url('/assets/img/blurred-black-cover.jpeg')"></div>
+    <div class="img-src img-blurred" style="background-image: url('/assets/img/blurred-black-cover.jpeg')"></div>
 </div>
 
 <div class="main">
@@ -1535,7 +1535,6 @@ $(&apos;.btn-tooltip&apos;).tooltip();
     </div>
 </div>
 </body>
-
 <script>
 $( "#slider-range" ).slider({
 	range: true,
