--- a/gsdk_dox/notification.html
+++ b/gsdk_dox/notification.html
@@ -6,12 +6,12 @@
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
-	
-	<link href="bootstrap3/css/bootstrap.css" rel="stylesheet" />
-    <link href="bootstrap3/css/font-awesome.css" rel="stylesheet" />
 
-	<link href="assets/css/get-shit-done.css" rel="stylesheet" />
-    <link href="assets/css/demo.css" rel="stylesheet" />
+	<link href="/bootstrap3/css/bootstrap.css" rel="stylesheet" />
+    <link href="/bootstrap3/css/font-awesome.css" rel="stylesheet" />
+
+	<link href="/assets/css/get-shit-done.css" rel="stylesheet" />
+    <link href="/assets/css/demo.css" rel="stylesheet" />
 
     <!--     Font Awesome     -->
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
@@ -25,8 +25,8 @@
     <!--
         navbar-default can be changed with navbar-ct-blue navbar-ct-azzure navbar-ct-red navbar-ct-green navbar-ct-orange
         -->
-        <nav class="navbar navbar-ct-blue navbar-transparent navbar-fixed-top" role="navigation">
-          <div class="alert alert-success hidden">
+        <nav class="navbar navbar-default navbar-transparent navbar-fixed-top" role="navigation">
+          <div class="alert alert-success">
             <div class="container">
                 <b>Lorem ipsum</b> dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
             </div>
@@ -79,7 +79,7 @@
           </div><!-- /.container-fluid -->
         </nav>
      <div class="blurred-container">
-            <div class="img-src" style="background-image: url('assets/img/bg.jpg')"></div>
+            <div class="img-src" style="background-image: url('/assets/img/bg.jpg')"></div>
         </div>
     </div><!--  end navbar -->
 
@@ -99,15 +99,15 @@
 
 </body>
 
-    <script src="jquery/jquery-1.10.2.js" type="text/javascript"></script>
-	<script src="assets/js/jquery-ui-1.10.4.custom.min.js" type="text/javascript"></script>
+    <script src="/jquery/jquery-1.10.2.js" type="text/javascript"></script>
+	<script src="/assets/js/jquery-ui-1.10.4.custom.min.js" type="text/javascript"></script>
 
-	<script src="bootstrap3/js/bootstrap.js" type="text/javascript"></script>
-	<script src="assets/js/gsdk-checkbox.js"></script>
-	<script src="assets/js/gsdk-radio.js"></script>
-	<script src="assets/js/gsdk-bootstrapswitch.js"></script>
-	<script src="assets/js/get-shit-done.js"></script>
+	<script src="/bootstrap3/js/bootstrap.js" type="text/javascript"></script>
+	<script src="/assets/js/gsdk-checkbox.js"></script>
+	<script src="/assets/js/gsdk-radio.js"></script>
+	<script src="/assets/js/gsdk-bootstrapswitch.js"></script>
+	<script src="/assets/js/get-shit-done.js"></script>
 
-    <script src="assets/js/custom.js"></script>
+    <script src="/assets/js/custom.js"></script>
 
 </html>
