--- a/gsdk_dox/tutorial.html
+++ b/gsdk_dox/tutorial.html
@@ -9,15 +9,15 @@
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
 
-	<link href="bootstrap3/css/bootstrap.css" rel="stylesheet" />
-	<link href="assets/css/get-shit-done.css" rel="stylesheet" />
-    <link href="assets/css/demo.css" rel="stylesheet" />
+	<link href="/bootstrap3/css/bootstrap.css" rel="stylesheet" />
+	<link href="/assets/css/get-shit-done.css" rel="stylesheet" />
+    <link href="/assets/css/demo.css" rel="stylesheet" />
 
-    <link href="bootstrap3/css/font-awesome.css" rel="stylesheet">
+    <link href="/bootstrap3/css/font-awesome.css" rel="stylesheet">
 
-	<script src="jquery/jquery-1.10.2.js" type="text/javascript"></script>
-	<script src="bootstrap3/js/bootstrap.js" type="text/javascript"></script>
-    <script src="assets/js/custom.js"></script>
+	<script src="/jquery/jquery-1.10.2.js" type="text/javascript"></script>
+	<script src="/bootstrap3/js/bootstrap.js" type="text/javascript"></script>
+    <script src="/assets/js/custom.js"></script>
 
 </head>
 <body>
@@ -27,7 +27,7 @@
      <div class="logo-container">
 
         <div class="logo">
-            <img src="assets/img/new_logo.png">
+            <img src="/assets/img/new_logo.png">
         </div>
         <div class="brand">
             Creative Tim
@@ -189,16 +189,12 @@
     <div class="container">
         <div class="row support">
             <div class="col-sm-3">
-
             </div>
             <div class="col-sm-3">
-
             </div>
             <div class="col-sm-4">
-
             </div>
             <div class="col-sm-2">
-
             </div>
         </div>
         <div class="row">
@@ -209,7 +205,5 @@
     </div>
     </div>
 </div>
-
 </body>
-
 </html>
