Decided to add a dropdown menu of my other sites.

--- a/index.html
+++ b/index.html
@@ -49,10 +49,16 @@
 									<li><a href="#">Another thing</a></li>
 								</ul>
 							</li>
-							<li><a href="https://github.com/kawaiidesune/extended-live-archive"><i class="fa fa-github"></i> View on Github</a></li>
 						</ul>
 						<ul class="nav navbar-nav navbar-right">
-							<li><a href="http://veroniquebellamy.fr/">V&eacute;ronique Bellamy</a></li>
+							<li><a href="#" class="dropdown-toggle" data-toggle="dropdown">My other sites <b class="caret"></b></a>
+								<ul class="dropdown-menu">
+									<li><a href="http://veroniquebellamy.fr">My main site</a></li>
+									<li><a href="http://vero.moe/">Vero.moe (my blog)</a></li>
+									<li><a href="http://vero4rtd.com/">Vero4RTD (my campaign site)</a></li>
+									<li><a href="http://judylubow.com/">JudyLubow.com</a></li>
+								</ul>
+							</li>
 						</ul>
 					</div><!-- /.navbar-collapse -->
 				</div><!-- /.container-fluid -->
