Adding more links & detail
These projects don’t have their own github site yet, but they will
eventually…

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>The original read me file &emdash; Extended Live Archive</title>
+    <title>Véronique Bellamy's GitHub Page</title>
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
@@ -41,12 +41,10 @@
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">My projects <b class="caret"></b></a>
 								<ul class="dropdown-menu">
 									<li><a href="/extended-live-archive/">Extended Live Archive</a></li>
-									<li><a href="#">Another action</a></li>
-									<li><a href="#">Something</a></li>
-									<li><a href="#">Another action</a></li>
-									<li><a href="#">Something</a></li>
+									<li><a href="/gamification-server/">Gamification Server</a></li>
+									<li><a href="/cakephp-mongodb/">MongoDB for CakePHP</a></li>
 									<li class="divider"></li>
-									<li><a href="#">Another thing</a></li>
+									<li><a href="/pointsplus/">PointsPlus Calculator</a></li>
 								</ul>
 							</li>
 						</ul>
