Cleaning up elements of the theme

--- a/gavin-seim/index.html
+++ b/gavin-seim/index.html
@@ -61,8 +61,6 @@
 						<div class="col-lg-6 px-0 order-lg-2" data-zanim-lg='{"animation":"slide-left","delay":0.4}' data-zanim-trigger="scroll">
 							<div class="owl-carousel owl-theme owl-dots-inner owl-theme-white h-100" data-options='{"items":1,"autoplay":true,"loop":true,"autoplayHoverPause":true,"animateOut":"fadeOut","nav":true}' data-zanim-lg='{"animation":"zoom-out","delay":0}' data-zanim-trigger="scroll">
 								<div class="min-vh-lg-100 py-9"><div class="bg-holder" style="background-image:url(/assets/img/headers/gavin-seim.jpg);"></div></div>
-								<div class="min-vh-lg-100 py-9"><div class="bg-holder" style="background-image:url(/assets/img/headers/header-2.jpg);"></div></div>
-								<div class="min-vh-lg-100 py-9"><div class="bg-holder" style="background-image:url(/assets/img/headers/header-12.jpg);"></div></div>
 							</div>
 						</div>
 						<div class="col-lg-6 bg-white py-7 py-md-8">
@@ -70,9 +68,38 @@
 								<div class="col-lg-10 text-black text-center text-lg-left" data-zanim-timeline="{}" data-zanim-trigger="scroll">
 									<div class="overflow-hidden"><h4 class="text-uppercase font-weight-normal ls text-white bg-dark p-1 rounded d-inline-block" data-zanim-xs='{"delay":0.1}'>Libertarian Conman</h4></div>
 									<div class="overflow-hidden"><h1 class="display-3 fs-5 fs-sm-6" data-zanim-xs='{"delay":0.2}'><span class="font-weight-light">the tale of</span><br/><span class="text-underline">Gavin Seim</span></h1></div>
-									<div class="overflow-hidden"><p class="text-900 fs-0 mt-3 mt-md-5" data-zanim-xs='{"delay":0.3}'>There is an unfortunate stereotype about refugee claimants from the United States. That the level of protection necessary is unnecessary and that the complaints of claimants from the United States are trivial or do not merit protection. Fraudulent claimants like Gavin Seim do not help in dispelling this notion.</p></div>
+									<div class="overflow-hidden">
+										<p class="text-900 fs-0 mt-3 mt-md-5" data-zanim-xs='{"delay":0.3}'>There is an unfortunate stereotype about refugee claimants from the United States. That the level of protection necessary is, in fact, unnecessary and that the complaints of claimants from the United States are trivial or do not merit protection. Fraudulent claimants like Gavin Seim do not help in dispelling this notion.</p>
+										<p class="text-900 fs-0 mt-3 mt-md-5" data-zanim-xs='{"delay":0.3}'>Gavin Seim is a man who has a lot of <em>"notions"</em>. In other words, he believes in a lot of crazy things that have no basis in reality. He believes that any expectations that people adhere to the social contract in any way is "tyranny". That accepting the consequences of your actions is akin to "walking into the gas chambers".</p>
+									</div>
 								</div>
 							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="text-center py-8 py-md-11 overflow-hidden" id="default-video">
+				<div class="bg-holder parallax" style="background-image:url(/assets/img/gavin-fleeing-video-play.png);" data-rellax-percentage="0.5"></div>
+				<div class="container-fluid">
+					<div class="row align-items-center">
+						<div class="col-12">
+							<a class="text-white" href="https://www.youtube.com/watch?v=ohBIEUOsooQ" data-fancybox="data-fancybox" data-options='{"youtube":{"start":1,"end":154}}'>
+								<svg class="mx-auto d-block" width="100" height="100" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 274.19 274.19" data-zanim-svg='{"duration":2,"ease":"CubicBezier","trigger":"scroll"}'>
+									<defs>
+										<style>
+										.play-path {
+										fill: none;
+										stroke: #ffffff;
+										stroke-linecap: round;
+										stroke-linejoin: round;
+										stroke-width: 12px;
+										}
+										</style>
+									</defs>
+									<g><path class="play-path" d="M208.31,29.4A129.12,129.12,0,1,1,137.1,8m-1.48,170.53L199.94,137,104.07,79.46v113"></path></g>
+								</svg>
+								<span class="h4 mt-3 text-white" data-zanim-xs='{"from":{"letter-spacing":"0.2em","opacity":0},"to":{"letter-spacing":0,"opacity":1},"delay":0.8}' data-zanim-trigger="scroll">watch gavin lie to justify fleeing from justice</span>
+							</a>
 						</div>
 					</div>
 				</div>
