--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
 					<div class="row h-full border-bottom border-300">
 						<div class="col-lg-6 px-0 order-lg-2" data-zanim-lg='{"animation":"slide-left","delay":0.4}' data-zanim-trigger="scroll">
 							<div class="owl-carousel owl-theme owl-dots-inner owl-theme-white h-100" data-options='{"items":1,"autoplay":true,"loop":true,"autoplayHoverPause":true,"animateOut":"fadeOut","nav":true}' data-zanim-lg='{"animation":"zoom-out","delay":0}' data-zanim-trigger="scroll">
-								<div class="min-vh-lg-100 py-9"><div class="bg-holder" style="background-image:url(assets/img/headers/header-3.jpg);"></div></div>
-								<div class="min-vh-lg-100 py-9"><div class="bg-holder" style="background-image:url(assets/img/headers/header-2.jpg);"></div></div>
-								<div class="min-vh-lg-100 py-9"><div class="bg-holder" style="background-image:url(assets/img/headers/header-12.jpg);"></div></div>
+								<div class="min-vh-lg-100 py-9"><div class="bg-holder" style="background-image:url(assets/img/headers/IMG_1302.JPG);"></div></div>
+								<div class="min-vh-lg-100 py-9"><div class="bg-holder" style="background-image:url(assets/img/headers/13198644_10153741169188843_4988539503901043529_o.jpg);"></div></div>
 							</div>
 						</div>
 						<div class="col-lg-6 bg-white py-7 py-md-8">
@@ -75,8 +74,9 @@
 										<div class="d-lg-flex align-items-center font-weight-bold ls mt-3 mt-md-5 text-uppercase" data-zanim-xs='{"delay":0.4}'>
 											<h6 class="mb-lg-0">Follow Me:</h6>
 											<div class="overflow-hidden">
-												<a href="#"><span class="fab fa-facebook text-dark mr-2 ml-3 fs-0"></span></a>
+												<a href="https://www.facebook.com/vmbellamy/"><span class="fab fa-facebook text-dark mr-2 ml-3 fs-0"></span></a>
 												<a href="https://twitter.com/yaynewfriend"><span class="fab fa-twitter text-dark mr-2 fs-0"></span></a>
+												<a href="https://instagram.com/veroniquebellamy"><span class="fab fa-instagram text-dark mr-2 fs-0"></span></a>
 											</div>
 										</div>
 									</div>
