Getting the details of Gavin's activities onto the site

--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
 								<div class="col-lg-10 text-black text-center text-lg-left" data-zanim-timeline="{}" data-zanim-trigger="scroll">
 									<div class="overflow-hidden"><h4 class="text-uppercase font-weight-normal ls text-white bg-dark p-1 rounded d-inline-block" data-zanim-xs='{"delay":0.1}'>Refugee Claimant from the USA</h4></div>
 									<div class="overflow-hidden"><h1 class="display-3 fs-5 fs-sm-6" data-zanim-xs='{"delay":0.2}'><span class="font-weight-light">hello, my name is</span><br/><span class="text-underline">Véronique</span></h1></div>
-									<div class="overflow-hidden"><p class="text-900 fs-0 mt-3 mt-md-5" data-zanim-xs='{"delay":0.3}'>One day, I had to flee my country. After being threatened with multiple weapons, experiencing employment discrimination, and being refused protection by authorities across the country, I had no choice. This is my story.</p></div>
+									<div class="overflow-hidden">
+										<p class="text-900 fs-0 mt-3 mt-md-5" data-zanim-xs='{"delay":0.3}'>One day, I had to flee my country. After being threatened with multiple weapons, experiencing employment discrimination, and being refused protection by authorities across the country, I had no choice. This is my story.</p>
+										<p class="text-900 fs-0 mt-3 mt-md-5" data-zanim-xs='{"delay":0.3}'>Please forgive the lack of content on this website at this time. Part of it is due to my claim currently heard by the Immigration and Refugee Board's Refugee Protection Division. I would like to make sure that I give the most accurate timeline possible and the most impactful resources possible to those who may need to take a similar path to my own. Rest assured that once I am on the other end of this process, I will share everything.</p>
+									</div>
 									<div class="overflow-hidden">
 										<div class="d-lg-flex align-items-center font-weight-bold ls mt-3 mt-md-5 text-uppercase" data-zanim-xs='{"delay":0.4}'>
 											<h6 class="mb-lg-0">Follow Me:</h6>
