--- a/gavin-seim/index.html
+++ b/gavin-seim/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Vero.moe</title>
+		<title>About Fraudster Gavin Seim | Vero.moe</title>
 
 		<link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicons/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicons/favicon-32x32.png" />
@@ -20,6 +20,7 @@
 		<link href="/assets/lib/owl.carousel/owl.carousel.css" rel="stylesheet" />
 		<link href="/assets/lib/lightbox2/css/lightbox.min.css" rel="stylesheet" />
 		<link href="/assets/css/theme.css" rel="stylesheet" />
+		<link href="/assets/lib/plyr/plyr.css" rel="stylesheet" />
 	</head>
 	<body class="has-sidemenu overflow-hidden-x">
 		<nav class="fancynavbar" data-zanim-lg='{"from":{"opacity":1,"x":70},"to":{"opacity":1,"x":0},"ease":"CubicBezier","duration":0.8,"delay":0.3}' data-zanim-xs='{"from":{"opacity":1,"y":-43},"to":{"opacity":1,"y":0},"ease":"CubicBezier","duration":0.8,"delay":0.3}' data-zanim-trigger="scroll" data-exclusive="true">
@@ -74,6 +75,80 @@
 									</div>
 								</div>
 							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="border-top border-300" id="documents-filed">
+				<div class="container">
+					<div class="row justify-content-center text-center mb-6">
+						<div class="col-lg-6">
+							<h2 class="fs-3 fs-sm-4 text-underline mb-3">documents filed</h2>
+							<p class="text-500 font-italic">To give you an appropriate timeline of how the court case went down before Gavin absconded to Mexico, it is important to get a timeline of events leading up to Gavin choosing to start livin' la vida fugitiva.</p>
+							<hr class="hr-short mt-5 border-300" />
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-12 pl-lg-7">
+							<div class="row align-items-end">
+								<div class="col-lg-6 order-lg-2 text-center"><!-- image placeholder --></div>
+								<div class="col-lg-6 border-lg-left border-lg-bottom border-300 pb-lg-8 mt-4 mt-lg-0 mb-8 mb-lg-0">
+									<div class="process-item ml-6 ml-sm-8 ml-lg-6"><span class="process-item-number">01</span>
+										<h3>the arrest</h3>
+										<p>For Gavin Seim, it was a normal day of harassing innocent people with his video camera. </p>
+										<a class="btn btn-danger btn-block" href="/assets/files/gavin-seim-arrest.pdf"><i class="fal fa-file-pdf"></i> Download arrest info</a>
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-lg-6 border-lg-right border-lg-bottom border-300 text-center py-lg-8"><!-- image placeholder --></div>
+								<div class="col-lg-6 mt-4 mt-lg-0 mb-8 mb-lg-0 my-lg-8">
+									<div class="process-item ml-6 ml-sm-8 ml-lg-6"><span class="process-item-number">02</span>
+										<h3>the motion to compel</h3>
+										<p>On the 25th of October 2017, Prosecutor Marc Dano filed a Motion to Compel Gavin to unlock his phone. Given the fact that Gavin associates with other habitual criminals such as the Bundy ranchers and Ernie Tertelge, this obviously concerned him. After all, prosecutors might find contact details for co-conspirators, crimes that are currently planned or have already been committed, and <a href="https://rationalwiki.org/wiki/Child_pornography">other concerning things</a>.</p>
+										<p>While we can't know for certain what is actually on the phone, Gavin's criminal associations and conduct make it a likely treasure trove of criminal knowledge.</p>
+										<a class="btn btn-danger btn-block" href="/assets/files/20171025-motion.pdf"><i class="fal fa-file-pdf"></i> Download the Motion to Compel</a>
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-lg-6 order-lg-2 text-center align-self-center"><!-- image placeholder --></div>
+								<div class="col-lg-6 border-lg-left border-lg-bottom border-300 py-lg-8 mt-4 mt-lg-0 mb-8 mb-lg-0">
+									<div class="process-item ml-6 ml-sm-8 ml-lg-6">
+										<span class="process-item-number">03</span>
+										<h3>motion to admit prior acts of defendant</h3>
+										<p>Given that Gavin is a serial nuisance and criminal, Deputy Prosecuting Attorney Marc Fedorak filed a motion to the court to admit Gavin's felonious history into the court record.</p>
+										<a class="btn btn-danger btn-block" href="/assets/files/20171109-motion.pdf"><i class="fal fa-file-pdf"></i> Download the Motion to Admit Prior Acts of Defendant</a>
+									</div>
+								</div>
+							</div>
+							<div class="row overflow-hidden pb-1">
+								<div class="col-lg-6 border-lg-right border-300 text-center py-lg-8"><!-- image placeholder --></div>
+								<div class="col-lg-6 align-self-center mt-4 mt-lg-0 mt-lg-8">
+									<div class="process-item process-item-last ml-6 ml-sm-8 ml-lg-6">
+										<span class="process-item-number">04</span>
+										<h3>motion to dismiss</h3>
+										<p>Gavin filed his own motion with the court. He filed a pitiful Motion to Dismiss, claiming all sorts of nonsense. He claimed that there is a "lack of evidence" for the crimes he committed, that the things he did are okay because freedom of speech makes harassment okay, that he somehow didn't obstruct the police when they were trying to find a missing child.</p>
+										<a class="btn btn-danger btn-block" href="/assets/files/20171116-motion.pdf"><i class="fal fa-file-pdf"></i> Download Gavin's Motion to Dismiss</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="border-top border-300" id="court">
+				<div class="container">
+					<div class="row justify-content-center text-center mb-6">
+						<div class="col-lg-6">
+							<h2 class="fs-3 fs-sm-4 text-underline mb-3">how court went</h2>
+							<p class="text-500 font-italic">In case you were wondering what was actually said by Gavin in court, we have the audio.</p>
+							<hr class="hr-short mt-5 border-300" />
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-12 pl-lg-7">
+							<audio id="court-audio-player" controls><source src="/assets/files/court.mp3" type="audio/mp3" /></audio>
 						</div>
 					</div>
 				</div>
@@ -142,5 +217,9 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.6.15/browser-polyfill.min.js"></script>
 		<script src="/assets/js/progressbar.min.js"></script>
 		<script src="/assets/js/theme.js"></script>
+		<script src="/assets/lib/plyr/plyr.min.js"></script>
+		<script>
+			const courtAudio = new Plyr(document.getElementById('court-audio-player'));
+		</script>
 	</body>
 </html>
