--- a/changelog.html
+++ b/changelog.html
@@ -4,14 +4,14 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>About Fraudster Gavin Seim | Vero.moe</title>
+		<title>Changelog | Vero.moe</title>
 
 		<link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicons/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicons/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicons/favicon-16x16.png" />
 		<link rel="shortcut icon" type="image/x-icon" href="/assets/img/favicons/favicon.ico" />
 		<link rel="manifest" href="/assets/img/favicons/manifest.json" />
-		<meta name="msapplication-TileImage" content="assets/img/favicons/mstile-150x150.png" />
+		<meta name="msapplication-TileImage" content="/assets/img/favicons/mstile-150x150.png" />
 		<meta name="theme-color" content="#ffffff" />
 
 		<link href="/assets/lib/loaders.css/loaders.min.css" rel="stylesheet" />
@@ -20,7 +20,6 @@
 		<link href="/assets/lib/owl.carousel/owl.carousel.css" rel="stylesheet" />
 		<link href="/assets/lib/lightbox2/css/lightbox.min.css" rel="stylesheet" />
 		<link href="/assets/css/theme.css" rel="stylesheet" />
-		<link href="/assets/lib/plyr/plyr.css" rel="stylesheet" />
 	</head>
 	<body class="has-sidemenu overflow-hidden-x">
 		<nav class="fancynavbar" data-zanim-lg='{"from":{"opacity":1,"x":70},"to":{"opacity":1,"x":0},"ease":"CubicBezier","duration":0.8,"delay":0.3}' data-zanim-xs='{"from":{"opacity":1,"y":-43},"to":{"opacity":1,"y":0},"ease":"CubicBezier","duration":0.8,"delay":0.3}' data-zanim-trigger="scroll" data-exclusive="true">
@@ -77,120 +76,20 @@
 					<div class="row h-full border-bottom border-300">
 						<div class="col-lg-6 px-0 order-lg-2" data-zanim-lg='{"animation":"slide-left","delay":0.4}' data-zanim-trigger="scroll">
 							<div class="owl-carousel owl-theme owl-dots-inner owl-theme-white h-100" data-options='{"items":1,"autoplay":true,"loop":true,"autoplayHoverPause":true,"animateOut":"fadeOut","nav":true}' data-zanim-lg='{"animation":"zoom-out","delay":0}' data-zanim-trigger="scroll">
-								<div class="min-vh-lg-100 py-9"><div class="bg-holder" style="background-image:url(/assets/img/headers/gavin-seim.jpg);"></div></div>
+								<div class="min-vh-lg-100 py-9"><div class="bg-holder" style="background-image:url(/assets/img/headers/IMG_1302.JPG);"></div></div>
+								<div class="min-vh-lg-100 py-9"><div class="bg-holder" style="background-image:url(/assets/img/headers/13198644_10153741169188843_4988539503901043529_o.jpg);"></div></div>
 							</div>
 						</div>
 						<div class="col-lg-6 bg-white py-7 py-md-8">
 							<div class="row align-items-center justify-content-center h-100">
 								<div class="col-lg-10 text-black text-center text-lg-left" data-zanim-timeline="{}" data-zanim-trigger="scroll">
-									<div class="overflow-hidden"><h4 class="text-uppercase font-weight-normal ls text-white bg-dark p-1 rounded d-inline-block" data-zanim-xs='{"delay":0.1}'>Libertarian Conman</h4></div>
-									<div class="overflow-hidden"><h1 class="display-3 fs-5 fs-sm-6" data-zanim-xs='{"delay":0.2}'><span class="font-weight-light">the tale of</span><br/><span class="text-underline">Gavin Seim</span></h1></div>
+									<div class="overflow-hidden"><h4 class="text-uppercase font-weight-normal ls text-white bg-dark p-1 rounded d-inline-block" data-zanim-xs='{"delay":0.1}'>Refugee Claimant from the USA</h4></div>
+									<div class="overflow-hidden"><h1 class="display-3 fs-5 fs-sm-6" data-zanim-xs='{"delay":0.2}'><span class="font-weight-light">changelog</span></h1></div>
 									<div class="overflow-hidden">
-										<p class="text-900 fs-0 mt-3 mt-md-5" data-zanim-xs='{"delay":0.3}'>There is an unfortunate stereotype about refugee claimants from the United States. That the level of protection necessary is, in fact, unnecessary and that the complaints of claimants from the United States are trivial or do not merit protection. Fraudulent claimants like Gavin Seim do not help in dispelling this notion.</p>
-										<p class="text-900 fs-0 mt-3 mt-md-5" data-zanim-xs='{"delay":0.3}'>Gavin Seim is a man who has a lot of <em>"notions"</em>. In other words, he believes in a lot of crazy things that have no basis in reality. He believes that any expectations that people adhere to the social contract in any way is "tyranny". That accepting the consequences of your actions is akin to "walking into the gas chambers".</p>
+										<p class="text-900 fs-0 mt-3 mt-md-5" data-zanim-xs='{"delay":0.3}'>The latest update to this website is on the <strong>12th of June 2020</strong>. These updates include the shell of the elements of a refugee claim, which should be updated by the end of the weekend.</p>
 									</div>
 								</div>
 							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-			<section class="border-top border-300" id="documents-filed">
-				<div class="container">
-					<div class="row justify-content-center text-center mb-6">
-						<div class="col-lg-6">
-							<h2 class="fs-3 fs-sm-4 text-underline mb-3">documents filed</h2>
-							<p class="text-500 font-italic">To give you an appropriate timeline of how the court case went down before Gavin absconded to Mexico, it is important to get a timeline of events leading up to Gavin choosing to start livin' la vida fugitiva.</p>
-							<hr class="hr-short mt-5 border-300" />
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-12 pl-lg-7">
-							<div class="row align-items-end">
-								<div class="col-lg-6 order-lg-2 text-center"><!-- image placeholder --></div>
-								<div class="col-lg-6 border-lg-left border-lg-bottom border-300 pb-lg-8 mt-4 mt-lg-0 mb-8 mb-lg-0">
-									<div class="process-item ml-6 ml-sm-8 ml-lg-6"><span class="process-item-number">01</span>
-										<h3>the arrest</h3>
-										<p>For Gavin Seim, it was a normal day of harassing innocent people with his video camera. </p>
-										<a class="btn btn-danger btn-block" href="/assets/files/gavin-seim-arrest.pdf"><i class="fal fa-file-pdf"></i> Download arrest info</a>
-									</div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-lg-6 border-lg-right border-lg-bottom border-300 text-center py-lg-8"><!-- image placeholder --></div>
-								<div class="col-lg-6 mt-4 mt-lg-0 mb-8 mb-lg-0 my-lg-8">
-									<div class="process-item ml-6 ml-sm-8 ml-lg-6"><span class="process-item-number">02</span>
-										<h3>the motion to compel</h3>
-										<p>On the 25th of October 2017, Prosecutor Marc Dano filed a Motion to Compel Gavin to unlock his phone. Given the fact that Gavin associates with other habitual criminals such as the Bundy ranchers and Ernie Tertelge, this obviously concerned him. After all, prosecutors might find contact details for co-conspirators, crimes that are currently planned or have already been committed, and <a href="https://rationalwiki.org/wiki/Child_pornography">other concerning things</a>.</p>
-										<p>While we can't know for certain what is actually on the phone, Gavin's criminal associations and conduct make it a likely treasure trove of criminal knowledge.</p>
-										<a class="btn btn-danger btn-block" href="/assets/files/20171025-motion.pdf"><i class="fal fa-file-pdf"></i> Download the Motion to Compel</a>
-									</div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-lg-6 order-lg-2 text-center align-self-center"><!-- image placeholder --></div>
-								<div class="col-lg-6 border-lg-left border-lg-bottom border-300 py-lg-8 mt-4 mt-lg-0 mb-8 mb-lg-0">
-									<div class="process-item ml-6 ml-sm-8 ml-lg-6">
-										<span class="process-item-number">03</span>
-										<h3>motion to admit prior acts of defendant</h3>
-										<p>Given that Gavin is a serial nuisance and criminal, Deputy Prosecuting Attorney Marc Fedorak filed a motion to the court to admit Gavin's felonious history into the court record.</p>
-										<a class="btn btn-danger btn-block" href="/assets/files/20171109-motion.pdf"><i class="fal fa-file-pdf"></i> Download the Motion to Admit Prior Acts of Defendant</a>
-									</div>
-								</div>
-							</div>
-							<div class="row overflow-hidden pb-1">
-								<div class="col-lg-6 border-lg-right border-300 text-center py-lg-8"><!-- image placeholder --></div>
-								<div class="col-lg-6 align-self-center mt-4 mt-lg-0 mt-lg-8">
-									<div class="process-item process-item-last ml-6 ml-sm-8 ml-lg-6">
-										<span class="process-item-number">04</span>
-										<h3>motion to dismiss</h3>
-										<p>Gavin filed his own motion with the court. He filed a pitiful Motion to Dismiss, claiming all sorts of nonsense. He claimed that there is a "lack of evidence" for the crimes he committed, that the things he did are okay because freedom of speech makes harassment okay, that he somehow didn't obstruct the police when they were trying to find a missing child.</p>
-										<a class="btn btn-danger btn-block" href="/assets/files/20171116-motion.pdf"><i class="fal fa-file-pdf"></i> Download Gavin's Motion to Dismiss</a>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-			<section class="border-top border-300" id="court">
-				<div class="container">
-					<div class="row justify-content-center text-center mb-6">
-						<div class="col-lg-6">
-							<h2 class="fs-3 fs-sm-4 text-underline mb-3">how court went</h2>
-							<p class="text-500 font-italic">In case you were wondering what was actually said by Gavin in court, we have the audio.</p>
-							<hr class="hr-short mt-5 border-300" />
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-12 pl-lg-7">
-							<audio id="court-audio-player" controls><source src="/assets/files/court.mp3" type="audio/mp3" /></audio>
-						</div>
-					</div>
-				</div>
-			</section>
-			<section class="text-center py-8 py-md-11 overflow-hidden" id="default-video">
-				<div class="bg-holder parallax" style="background-image:url(/assets/img/gavin-fleeing-video-play.png);" data-rellax-percentage="0.5"></div>
-				<div class="container-fluid">
-					<div class="row align-items-center">
-						<div class="col-12">
-							<a class="text-white" href="https://www.youtube.com/watch?v=ohBIEUOsooQ" data-fancybox="data-fancybox" data-options='{"youtube":{"start":1,"end":154}}'>
-								<svg class="mx-auto d-block" width="100" height="100" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 274.19 274.19" data-zanim-svg='{"duration":2,"ease":"CubicBezier","trigger":"scroll"}'>
-									<defs>
-										<style>
-										.play-path {
-										fill: none;
-										stroke: #ffffff;
-										stroke-linecap: round;
-										stroke-linejoin: round;
-										stroke-width: 12px;
-										}
-										</style>
-									</defs>
-									<g><path class="play-path" d="M208.31,29.4A129.12,129.12,0,1,1,137.1,8m-1.48,170.53L199.94,137,104.07,79.46v113"></path></g>
-								</svg>
-								<span class="h4 mt-3 text-white" data-zanim-xs='{"from":{"letter-spacing":"0.2em","opacity":0},"to":{"letter-spacing":0,"opacity":1},"delay":0.8}' data-zanim-trigger="scroll">watch gavin lie to justify fleeing from justice</span>
-							</a>
 						</div>
 					</div>
 				</div>
@@ -209,9 +108,9 @@
 			<div class="toast-body p-4">
 				<button class="close text-white text-shadow-none position-absolute t-0 r-0 p-2 mr-1 fs-1" type="button" data-dismiss="toast" aria-label="Close"><span aria-hidden="true">×</span></button>
 				<div class="media">
-					<img class="mr-3" src="assets/img/icons/cookie-notice.png" width="50" alt="" />
+					<img class="mr-3" src="/assets/img/icons/cookie-notice.png" width="50" alt="" />
 					<div class="media-body">
-						<p class="fs-0 ls text-sans-serif">Our site uses cookies. By continuing to use our site, you agree to our <a class="text-white text-underline" href="components/sparrow/cookie-notice.html">Cookie Policy.</a></p>
+						<p class="fs-0 ls text-sans-serif">Our site uses cookies. By continuing to use our site, you agree to our <a class="text-white text-underline" href="/components/sparrow/cookie-notice.html">Cookie Policy.</a></p>
 						<button class="btn btn-outline-light btn-sm text-uppercase border-700" type="button" data-dismiss="toast" aria-label="Close">Ok, I understand</button>
 					</div>
 				</div>
@@ -233,9 +132,5 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.6.15/browser-polyfill.min.js"></script>
 		<script src="/assets/js/progressbar.min.js"></script>
 		<script src="/assets/js/theme.js"></script>
-		<script src="/assets/lib/plyr/plyr.min.js"></script>
-		<script>
-			const courtAudio = new Plyr(document.getElementById('court-audio-player'));
-		</script>
 	</body>
 </html>
