--- a/process/index.html
+++ b/process/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Vero.moe</title>
+		<title>Timeline of the Refugee Claim Process | Vero.moe</title>
 
 		<link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicons/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicons/favicon-32x32.png" />
@@ -106,40 +106,6 @@
 					</div>
 				</div>
 			</div>
-			<section class="py-0">
-				<div class="container-fluid">
-					<div class="row h-full border-bottom border-300">
-						<div class="col-lg-6 px-0 order-lg-2" data-zanim-lg='{"animation":"slide-left","delay":0.4}' data-zanim-trigger="scroll">
-							<div class="owl-carousel owl-theme owl-dots-inner owl-theme-white h-100" data-options='{"items":1,"autoplay":true,"loop":true,"autoplayHoverPause":true,"animateOut":"fadeOut","nav":true}' data-zanim-lg='{"animation":"zoom-out","delay":0}' data-zanim-trigger="scroll">
-								<div class="min-vh-lg-100 py-9"><div class="bg-holder" style="background-image:url(/assets/img/headers/IMG_1302.JPG);"></div></div>
-								<div class="min-vh-lg-100 py-9"><div class="bg-holder" style="background-image:url(/assets/img/headers/13198644_10153741169188843_4988539503901043529_o.jpg);"></div></div>
-							</div>
-						</div>
-						<div class="col-lg-6 bg-white py-7 py-md-8">
-							<div class="row align-items-center justify-content-center h-100">
-								<div class="col-lg-10 text-black text-center text-lg-left" data-zanim-timeline="{}" data-zanim-trigger="scroll">
-									<div class="overflow-hidden"><h4 class="text-uppercase font-weight-normal ls text-white bg-dark p-1 rounded d-inline-block" data-zanim-xs='{"delay":0.1}'>Refugee Claimant from the USA</h4></div>
-									<div class="overflow-hidden"><h1 class="display-3 fs-5 fs-sm-6" data-zanim-xs='{"delay":0.2}'><span class="font-weight-light">hello, my name is</span><br/><span class="text-underline">Véronique</span></h1></div>
-									<div class="overflow-hidden">
-										<p class="text-900 fs-0 mt-3 mt-md-5" data-zanim-xs='{"delay":0.3}'>One day, I had to flee my country. After being threatened with multiple weapons, experiencing employment discrimination, and being refused protection by authorities across the country, I had no choice. This is my story.</p>
-										<p class="text-900 fs-0 mt-3 mt-md-5" data-zanim-xs='{"delay":0.3}'>Please forgive the lack of content on this website at this time. Part of it is due to my claim currently heard by the Immigration and Refugee Board's Refugee Protection Division. I would like to make sure that I give the most accurate timeline possible and the most impactful resources possible to those who may need to take a similar path to my own. Rest assured that once I am on the other end of this process, I will share everything.</p>
-									</div>
-									<div class="overflow-hidden">
-										<div class="d-lg-flex align-items-center font-weight-bold ls mt-3 mt-md-5 text-uppercase" data-zanim-xs='{"delay":0.4}'>
-											<h6 class="mb-lg-0">Follow Me:</h6>
-											<div class="overflow-hidden">
-												<a href="https://www.facebook.com/vmbellamy/"><span class="fab fa-facebook text-dark mr-2 ml-3 fs-0"></span></a>
-												<a href="https://twitter.com/yaynewfriend"><span class="fab fa-twitter text-dark mr-2 fs-0"></span></a>
-												<a href="https://instagram.com/veroniquebellamy"><span class="fab fa-instagram text-dark mr-2 fs-0"></span></a>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
 		</main>
 		<footer class="footer bg-black text-600 py-4 text-sans-serif text-center overflow-hidden" data-zanim-timeline="{}" data-zanim-trigger="scroll">
 			<div class="container">
