--- a/changelog.html
+++ b/changelog.html
@@ -40,6 +40,23 @@
 				<ul class="fancynavbar-nav">
 					<li class="fancynav-item"><a class="fancynav-link" href="/index.html"><span class="fancynav-link-content">home</span></a></li>
 					<li class="fancynav-item fancy-dropdown">
+						<a class="fancynav-link fancy-dropdown-toggle" href="JavaScript:void(0)"><span class="fancynav-link-content">process of filing a refugee claim</span></a>
+						<div class="fancy-dropdown-menu">
+							<div class="row pb-4 pt-3">
+								<div class="col-auto">
+									<a class="fancy-dropdown-item" href="/process/">Timeline</a>
+									<a class="fancy-dropdown-item" href="/process/claim-airport.html">Making a claim at the airport</a>
+									<a class="fancy-dropdown-item" href="/process/claim-office.html">Making a claim at a IRCC/CBSA office</a>
+									<a class="fancy-dropdown-item" href="/process/basis-of-claim.html">Filing your Basis of Claim Form</a>
+									<a class="fancy-dropdown-item" href="/process/work-study-permit.html">Getting a Work and/or Study Permit</a>
+									<a class="fancy-dropdown-item" href="/process/hearing-day.html">The Day of Your Hearing</a>
+									<a class="fancy-dropdown-item" href="/process/rad-appeal.html">Filing an appeal with the Refugee Appeal Division</a>
+									<a class="fancy-dropdown-item" href="/process/federal-court.html">Filing an appeal with the Federal Court</a>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li class="fancynav-item fancy-dropdown">
 						<a class="fancynav-link fancy-dropdown-toggle" href="JavaScript:void(0)"><span class="fancynav-link-content">elements of a refugee claim</span></a>
 						<div class="fancy-dropdown-menu">
 							<div class="row pb-4 pt-3">
