--- a/process/preparing.html
+++ b/process/preparing.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Internal Flight Alternative | Elements of a Refugee Claim | Vero.moe</title>
+		<title>Preparing for your Claim | The Process of Filing a Refugee Claim in Canada | Vero.moe</title>
 
 		<link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicons/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicons/favicon-32x32.png" />
