--- a/process/claim-airport.html
+++ b/process/claim-airport.html
@@ -40,11 +40,24 @@
 				<ul class="fancynavbar-nav">
 					<li class="fancynav-item"><a class="fancynav-link" href="/index.html"><span class="fancynav-link-content">home</span></a></li>
 					<li class="fancynav-item fancy-dropdown">
+						<a class="fancynav-link fancy-dropdown-toggle" href="JavaScript:void(0)"><span class="fancynav-link-content">things you should know</span></a>
+						<div class="fancy-dropdown-menu">
+							<div class="row pb-4 pt-3">
+								<div class="col-auto">
+									<a class="fancy-dropdown-item" href="/ndp.html">National Documentation Package &amp; Country Conditions</a>
+									<a class="fancy-dropdown-item" href="/prra.html">Pre-Removal Risk Assessment</a>
+									<a class="fancy-dropdown-item" href="/safe-third-country.html">Safe Third Country Agreement</a>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li class="fancynav-item fancy-dropdown">
 						<a class="fancynav-link fancy-dropdown-toggle" href="JavaScript:void(0)"><span class="fancynav-link-content">process of filing a refugee claim</span></a>
 						<div class="fancy-dropdown-menu">
 							<div class="row pb-4 pt-3">
 								<div class="col-auto">
 									<a class="fancy-dropdown-item" href="/process/">Timeline</a>
+									<a class="fancy-dropdown-item" href="/process/preparing.html">Preparing for your claim</a>
 									<a class="fancy-dropdown-item" href="/process/claim-airport.html">Making a claim at the airport</a>
 									<a class="fancy-dropdown-item" href="/process/claim-office.html">Making a claim at a IRCC/CBSA office</a>
 									<a class="fancy-dropdown-item" href="/process/basis-of-claim.html">Filing your Basis of Claim Form</a>
