Added some details to a couple process pages

--- a/process/claim-airport.html
+++ b/process/claim-airport.html
@@ -119,6 +119,22 @@
 					</div>
 				</div>
 			</div>
+			<section class="py-0" id="promotion-header">
+				<div class="bg-holder overlay overlay-z-index-1" style="background-image:url(/assets/img/headers/photo-of-airplane-over-runway-2120659.jpg);" data-zanim-xs='{"delay":0.4,"animation":"zoom-out"}' data-zanim-trigger="scroll"></div>
+				<!--/.bg-holder-->
+				<div class="container">
+					<div class="row min-vh-50 align-items-center py-9">
+						<div class="col-lg-6" data-zanim-timeline='{"delay":0.4}' data-zanim-trigger="scroll">
+							<div class="overflow-hidden">
+								<h1 class="fs-4 fs-md-5 text-white display-4" data-zanim-xs='{"delay":0.1}'>Making your claim at an airport</h1>
+							</div>
+							<div class="overflow-hidden">
+								<h4 class="font-weight-normal mb-4 text-300 mt-5" data-zanim-xs='{"delay":0.2}'>In this post, I'll tell you why you want to file your claim at an airport rather than at a land or sea border.</h4>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer bg-black text-600 py-4 text-sans-serif text-center overflow-hidden" data-zanim-timeline="{}" data-zanim-trigger="scroll">
 			<div class="container">
