Added content to the page about making your claim at an airport
No, it's not everything I intend to write for that page, but it does kick it off.

--- a/process/basis-of-claim.html
+++ b/process/basis-of-claim.html
@@ -127,7 +127,7 @@
 					<div class="row min-vh-50 align-items-center py-9">
 						<div class="col" data-zanim-timeline='{"delay":0.4}' data-zanim-trigger="scroll">
 							<div class="overflow-hidden">
-								<h1 class="fs-4 fs-md-5 text-white display-4" data-zanim-xs='{"delay":0.1}'>Filing Your Basis of Claim Form</h1>
+								<h1 class="fs-4 fs-md-5 text-white display-4" data-zanim-xs='{"delay":0.1}'><i class="fal fa-file-contract"></i> Filing Your Basis of Claim Form</h1>
 							</div>
 							<div class="overflow-hidden">
 								<h4 class="font-weight-normal mb-4 text-300 mt-5" data-zanim-xs='{"delay":0.2}'>Laying out your claim as well as you can within 15 days.</h4>
@@ -146,12 +146,10 @@
 					</div>
 					<div class="row pt-6">
 						<div class="col-md-6 col-lg pr-md-6">
-							<img src="assets/img/icons/icon-teamwork.svg" alt="" height="70" />
 							<h3 class="mt-4 mb-2"><i class="fal fa-building"></i> File at the IRB office</h3>
 							<p class="text-justify">Filing in person at an IRB office is the best option, if you can swing it. It gives you the advantage of being able to file the claim the same day and to have the stamp from the local office on your copy of the Basis of Claim form. Make sure that when you leave the IRB office, your copy of the basis of claim form has a stamp on it from the Immigration and Refugee Board with the date you submitted it. You'll also get your case number with the Immigration and Refugee Board at this time.</p>
 						</div>
 						<div class="col-md-6 col-lg mt-6 mt-md-0 pr-md-6">
-							<img src="assets/img/icons/icon-startup.svg" alt="" height="70" />
 							<h3 class="mt-4 mb-2"><i class="fal fa-envelope"></i> Mail it in</h3>
 							<p class="text-justify">I do not recommend this approach, but if you must mail it in, do so with a courier service with a guaranteed delivery window. Do not rely on Canada Post to deliver it on time, unless you're getting <a href="https://www.canadapost.ca/web/en/products/details.page?article=priority_our_fastest">Priority service</a>. Make sure you keep note of the tracking number. If you're mailing it in, mail it to the IRB office for your region. The address should be on the Notice given to you at the airport by the CBSA.</p>
 						</div>
