--- a/process/claim-airport.html
+++ b/process/claim-airport.html
@@ -124,13 +124,69 @@
 				<!--/.bg-holder-->
 				<div class="container">
 					<div class="row min-vh-50 align-items-center py-9">
-						<div class="col-lg-6" data-zanim-timeline='{"delay":0.4}' data-zanim-trigger="scroll">
+						<div class="col" data-zanim-timeline='{"delay":0.4}' data-zanim-trigger="scroll">
 							<div class="overflow-hidden">
-								<h1 class="fs-4 fs-md-5 text-white display-4" data-zanim-xs='{"delay":0.1}'>Making your claim at an airport</h1>
+								<h1 class="fs-4 fs-md-5 text-white display-4" data-zanim-xs='{"delay":0.1}'><i class="fal fa-plane-arrival"></i> Making your claim at an airport</h1>
 							</div>
 							<div class="overflow-hidden">
 								<h4 class="font-weight-normal mb-4 text-300 mt-5" data-zanim-xs='{"delay":0.2}'>In this post, I'll tell you why you want to file your claim at an airport rather than at a land or sea border.</h4>
 							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section id="studio-features-1">
+				<div class="container">
+					<div class="row justify-content-center text-center">
+						<div class="col-lg-9 col-xl-8">
+							<h2 class="text-underline mb-3 fs-3 fs-sm-4">Why You Should File At An Airport</h2>
+							<p class="lead text-500 font-italic">Filing at an airport gives you all the advantages of filing at a land port of entry with none of the adverse effects.</p>
+						</div>
+					</div>
+					<div class="row pt-6">
+						<div class="col-md-6 col-lg pr-md-6">
+							<h3 class="mt-4 mb-2">Safe Third Country Agreement</h3>
+							<p class="text-justify">Canada has an agreement with the United States called the "Safe Third Country Agreement" which is based on the erroneous assumption that the United States is a safe third country. However, the Safe Third Country agreement does not apply to U.S. nationals.</p>
+						</div>
+						<div class="col-md-6 col-lg mt-6 mt-md-0 pr-md-6">
+							<h3 class="mt-4 mb-2">Extra Time To Prepare</h3>
+							<p class="text-justify">While a Customs Officer will make the determination as to whether or not they should refer your claim to the Immigration and Refugee Board, filing at the airport gives you 15 days to prepare your basis of claim form.</p>
+							<p class="text-justify">Though, this extra time does come with a risk. The risk is that if you do not file within the time limit, your claim could be considered "abandoned" by the Immigration and Refugee Board.</p> 
+						</div>
+					</div>
+				</div>
+			</section>
+			<section id="studio-features-1">
+				<div class="container">
+					<div class="row justify-content-center text-center">
+						<div class="col-lg-9 col-xl-8">
+							<h2 class="text-underline mb-3 fs-3 fs-sm-4">If your claim is referred</h2>
+							<p class="lead text-500 font-italic">A Minister's Delegate will make the decision whether or not your claim will be referred to the Immigration and Refugee Board. You'll be given a few documents, including a Refugee Protection Claimant Document.</p>
+						</div>
+					</div>
+					<div class="row pt-6">
+						<div class="col-md-6 col-lg pr-md-6">
+							<h3 class="mt-4 mb-2">Refugee Protection Claimant Document</h3>
+							<p class="text-justify">The Refugee Protection Claimant Document is a document issued to you by the CBSA. It will serve as an identity document until you can qualify to get a provincial or territorial ID card/driver's license.</p>
+							<h4>Provincial Requirements to Get ID</h4>
+							<ul>
+								<li><a href="https://www.alberta.ca/get-id-card.aspx">Alberta</a></li>
+								<li><a href="https://www2.gov.bc.ca/gov/content/governments/government-id/bc-services-card/get-a-card">British Columbia</a></li>
+								<li><a href="https://www.mpi.mb.ca/Pages/apply-for-id-card.aspx">Manitoba</a></li>
+								<li><a href="https://www.gov.nl.ca/snl/drivers/photoid/photoid/">Newfoundland and Labrador</a></li>
+								<li><a href="https://www.inf.gov.nt.ca/en/services/driver-and-vehicle-services">Northwest Territories</a></li>
+								<li><a href="https://www.novascotia.ca/sns/RMV/other/idcard.asp">Nova Scotia</a></li>
+								<li><a href="https://www.gov.nu.ca/edt/faq/where-can-i-get-general-identification-card">Nunavut</a></li>
+								<li><a href="https://www.ontario.ca/page/ontario-photo-card">Ontario</a></li>
+								<li><a href="https://www.princeedwardisland.ca/en/information/transportation-infrastructure-and-energy/voluntary-id">Prince Edward Island</a></li>
+								<li data-toggle="tooltip" data-placement="top" title="Unfortunately, Qu&eacute;bec no longer offers non-driver identification cards.">Qu&eacute;bec</li>
+								<li><a href="https://www.sgi.sk.ca/non-driver-id">Saskatchewan</a></li>
+								<li><a href="https://yukon.ca/en/general-id-card">Yukon</a></li>
+							</ul>
+						</div>
+						<div class="col-md-6 col-lg mt-6 mt-md-0 pr-md-6">
+							<h3 class="mt-4 mb-2">Interim Federal Health Program</h3>
+							<p class="text-justify">Once your claim is referred, you'll be enrolled into <a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/refugees/help-within-canada/health-care/interim-federal-health-program/coverage-summary.html">the Interim Federal Health Program</a>. The IFHP is health insurance until you become covered by a provincial health care plan. The IFHP has a few additional benefits that provincial health care plans may not have, such as vision coverage as well as the coverage of one immigration medical exam. The CBSA officer who makes the decision will, in all likelihood, tell you that you need to go get a medical exam within 30 days. However, if you want to get your work or study permit as quickly as you can, my best advice is to get that medical exam done as quickly as you can. Keep in mind that it may take two or three business days for your coverage under the IFHP to be reflected in the system. Additionally, only <a href="https://secure.cic.gc.ca/pp-md/pp-list.aspx">a panel physician approved by Immigration, Refugees, and Citizenship Canada</a> can perform the exam, so keep that in mind when looking for a physician.</p>
 						</div>
 					</div>
 				</div>
